fix: improve overflow handling on small screen

--- a/src/shared/styles/globals.scss
+++ b/src/shared/styles/globals.scss
@@ -76,7 +76,7 @@
 }
 
 .app {
-  @apply flex flex-col justify-center min-h-screen w-screen bg-[#e0c3b4] text-gray-700;
+  @apply flex flex-col justify-center min-h-screen bg-[#e0c3b4] text-gray-700 overflow-scroll;
 }
 
 .loading {
@@ -87,7 +87,7 @@
   @apply mx-auto w-full max-w-xl min-w-min m-4 mb-0 p-4;
 
   .card {
-    @apply bg-white rounded-xl shadow-xl p-8 flex flex-col gap-x-5 gap-y-6 items-center justify-center;
+    @apply bg-white rounded-xl shadow-xl p-8 flex flex-col gap-8 items-center justify-center;
   }
 
   .tooltip {
@@ -106,7 +106,7 @@
   }
 
   .sub-title {
-    @apply text-4xl cursor-default;
+    @apply text-4xl cursor-default text-center;
   }
 
   .input-box {
@@ -131,7 +131,7 @@
 }
 
 .btn-group {
-  @apply flex gap-4 select-none;
+  @apply flex gap-3 sm:gap-4 select-none;
 
   .btn {
     @apply px-4 py-2 border-2 border-zinc-700 rounded-full cursor-pointer transition-colors ease-in-out;
